# calculator-pro

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  main.py  pyproject.toml
src/calculator_pro/: __init__.py
src/calculator_pro/ai/: __init__.py  explanations.py
src/calculator_pro/cli/: __init__.py  menu.py
src/calculator_pro/core/: __init__.py  expressions.py
src/calculator_pro/export/: __init__.py  reports.py
src/calculator_pro/functions/: __init__.py  calculus.py  polynomials.py
src/calculator_pro/matrix/: __init__.py  operations.py  types.py
src/calculator_pro/probability/: __init__.py  combinatorics.py  probability.py  simulation.py
src/calculator_pro/statistics/: __init__.py  descriptive.py
src/calculator_pro/study/: __init__.py  sessions.py
src/calculator_pro/ui/: __init__.py  controller.py
src/calculator_pro/vectors/: __init__.py  operations.py
src/calculator_pro/visualization/: __init__.py  interactive.py  plots.py
tests/: conftest.py  test_ai_explanations.py  test_cli_modes.py  test_expression_graph_export_study.py  test_matrix_operations.py  test_probability_functions.py  test_probability_simulation.py  test_vectors.py  test_visualization.py
